--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="portrait">
             </activity>
 
-        <activity android:name=".CameraActivity" android:screenOrientation="landscape">
+        <activity android:name=".CameraActivity" android:screenOrientation="portrait">
         </activity>
 
     </application>
