--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,10 +32,15 @@
         </activity>
 
         <activity android:name=".ImageActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="landscape">
             </activity>
 
-        <activity android:name=".CameraActivity" android:screenOrientation="portrait">
+        <activity android:name=".CameraActivity"
+            android:screenOrientation="landscape">
+        </activity>
+
+        <activity android:name=".AboutActivity"
+            android:screenOrientation="portrait">
         </activity>
 
     </application>
