--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="db171de015e11e4fc48b72e524144b39e8c935fb" />
     </application>
 
 </manifest>
